# SupContrast

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  calculator.py  custom_dataset.py  data_process_mvp.ipynb  datadata.csv  dataset_statistics.py  demo.py  export.py  fscore.py  image_reducer.py  inference_g4.py  inference_image.py  inference_onnx.py  losses.py  main.py  main_ce.py  main_classify.py  main_linear.py  main_ore.py  main_supcon.py  mean_std.py  mean_std.txt  metrics.py  pipeline.py  preprocess.py  pyproject.toml  question_loader.py  quiz_master.py  requirements.txt  segmentation.py  sweep.yaml  testing.ipynb  train.sh  tune_supcon.py  (+1 more)
configs/: config.yaml
constants/: constants.py
data/: african_id_selection.csv  balanced_data.csv  caucassian_id_selection.csv  data_2_race.csv  data_exploration.ipynb  dataset.py  get_data.ipynb  unbalanced_African.csv  unbalanced_Asian.csv  unbalanced_Caucasian.csv  unbalanced_Indian.csv
dataset/: chexpert.py  collate.py
encoder_models/: base_model.py  cluter_base_model.py  rank_base_model.py  resnet.py  vit.py
networks/: densenet.py  facenet.py  resnet_big.py  vit.py
notebooks/: 1. coco_to_crops.ipynb  2. sample_from_cifar100.ipynb
sweeps/: sweep.yaml  sweep_linear.yaml
