[tool.poetry]
name = "supervised-contrastive-loss"
version = "0.1.0"
description = ""
authors = ["Sean (Seok-Won) Yi <seantuokc@gmail.com>"]
readme = "README.md"
# packages = [{include = "supervised_contrastive_loss"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
